k8s/apps/mainloop/overlays/prod/frontend-config-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainloop-frontend
  namespace: mainloop
spec:
  template:
    spec:
      containers:
        - name: frontend
